--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,12 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://mvnrepository.com/artifact/javax.mail/mail' }
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.tools.build:gradle:4.1.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -22,6 +21,11 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        maven {
+            url "https://mvnrepository.com/artifact/javax.mail/mail"
+        }
+
+
     }
     dependencies {
 
